# ffmpeg-starter

./: .gitignore  CMakeLists.txt  README.md  configure.sh  run.sh
lib/av/: CMakeLists.txt
src/: main.cpp
